--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -264,19 +264,22 @@
 
 .videoContainer {
   position: relative;
-  margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .video {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  object-fit: cover;
 }
 
 .buttonContainer {
   position: absolute;
-  bottom: 20px;
+  bottom: -35vh;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -284,8 +287,20 @@
 }
 
 .captureButton {
-  padding: 10px 20px;
+  padding: 20px 20px;
   background-color: #007bff;
+  background-image: url(/public/images/circle.png);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.resetButton {
+  padding: 20px 20px;
+  background-color: #dc3545;
   color: white;
   border: none;
   border-radius: 5px;
@@ -299,7 +314,7 @@
 }
 
 .uploadLabel {
-  padding: 10px 20px;
+  padding: 20px 20px;
   background-color: #28a745;
   color: white;
   border-radius: 5px;
