--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -287,15 +287,23 @@
 }
 
 .captureButton {
-  padding: 20px 20px;
+  padding: 20px;
   background-color: #007bff;
-  background-image: url(/public/images/circle.png);
   color: white;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px; /* Adjust icon size */
+}
+
+.captureButton:hover {
+  background-color: #0056b3;
 }
 
 .resetButton {
