--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -264,19 +264,22 @@
 
 .videoContainer {
   position: relative;
-  margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .video {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  object-fit: cover;
 }
 
 .buttonContainer {
   position: absolute;
-  bottom: 20px;
+  bottom: -40vh;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -284,8 +287,21 @@
 }
 
 .captureButton {
-  padding: 10px 20px;
-  background-color: #007bff;
+  padding: 20px 20px;
+  background-color: transparent;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  filter: invert(1);
+}
+
+.resetButton {
+  padding: 20px 20px;
+  background-color: #dc3545;
   color: white;
   border: none;
   border-radius: 5px;
@@ -294,22 +310,15 @@
   transition: background-color 0.3s ease;
 }
 
-.captureButton:hover {
-  background-color: #0056b3;
-}
-
 .uploadLabel {
-  padding: 10px 20px;
-  background-color: #28a745;
+  padding: 20px 20px;
+  background-color: transparent;
   color: white;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
-
-.uploadLabel:hover {
-  background-color: #218838;
+  filter: invert(1);
 }
 
 .uploadInput {
@@ -324,6 +333,10 @@
 }
 
 .imageContainer {
+  position: absolute;
+  top: 20px; /* Adjust the top position as needed */
+  right: 20px; /* Adjust the right position as needed */
+  z-index: 1001; /* Ensure it stays above other elements */
   text-align: center;
 }
 
