--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -279,22 +279,26 @@
 
 .buttonContainer {
   position: absolute;
-  bottom: -40vh;
+  bottom: -60vh;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  gap: 10px;
-  width: 100%;
+  gap: 20px; /* Adjust the gap as needed */
+  align-items: center;
+  justify-content: center;
 }
 
 .captureButton {
-  padding: 20px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
   background-color: transparent;
   color: white;
   border: none;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   filter: invert(1);
@@ -312,11 +316,15 @@
 }
 
 .uploadLabel {
-  padding: 20px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
   background-color: transparent;
   color: white;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   filter: invert(1);
@@ -328,25 +336,21 @@
 
 .imageRow {
   display: flex;
-  justify-content: center;
-  gap: 20px; /* Space between images */
-  margin-top: 20px;
+  justify-content: center; /* Or use space-between */
+  align-items: flex-start; /* Align images at the top */
+  gap: 20px; /* Add spacing between images */
 }
 
 .imageContainer {
-  position: absolute;
-  top: 20px; /* Adjust the top position as needed */
-  right: 20px; /* Adjust the right position as needed */
-  z-index: 1001; /* Ensure it stays above other elements */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
 .originalImage {
-  max-width: 200px; /* Smaller size for the captured/uploaded image */
-  max-height: 200px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  object-fit: cover;
+  max-width: 100%;
+  height: auto;
 }
 
 .updatedImage {
