--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,7 +5,7 @@
     background-color: #fff;
     display: flex;
     justify-content: space-around;
-    padding: 10px 0;
+    padding: 10px 0 1.3rem 0;
     border-top: 1px solid #ddd;
   }
   
