added color background

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -315,7 +315,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: transparent;
+  background-color: purple;
   color: white;
   border: none;
   border-radius: 50%;
@@ -342,7 +342,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: transparent;
+  background-color: purple;
   color: white;
   border-radius: 50%;
   width: 100px;
