--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -311,7 +311,7 @@
 
 .captureButton {
   padding: 20px 20px;
-  background-color: transparent;
+  background-color: purple;
   color: white;
   border: none;
   border-radius: 50%;
@@ -335,7 +335,7 @@
 
 .uploadLabel {
   padding: 20px 20px;
-  background-color: transparent;
+  background-color: black;
   color: white;
   border-radius: 5px;
   font-size: 16px;
